<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlunoUniasselvi</string>
    <string name="app_desc">Aplicativo de controle do aluno uniasselvi NEAD.</string>
    <string name="app_version">v0.60</string>
    
    <string name="menu_settings">Settings</string>
    <string name="ale_retorno_vazio">Não existe informações</string>
    <string name="ale_buscando_dados">Buscando Dados. . .</string>
    <string name="ale_nota_redacao">Informe a nota da Redação</string>
    <string name="ale_nota_0_10">Informe uma nota de 0 a 10</string>
    <string name="ale_aprovacao_0">Nenhuma possibilidade para sua aprovação</string>
    <string name="ale_nota_2_prova">Informe a nota da 2ª prova</string>
	
	<string name="ale_temabase">Informe ao menos 3 caracteres no tema do seminário</string>
	<string name="ale_curso">Informe ao menos 3 caracteres no nome do curso</string>
	
    <string name="er_json">Erro no tratamento dos dados</string>
    
    <string name="lb_simulador_notas">Simulador de Notas Finais</string>
    <string name="lb_desc_simulador_notas">Simule quanto necessitará para ser aprovado em uma disciplina.</string>
    <string name="lb_resultado_simulador_notas">Resultado da Simulação</string>
    <string name="lb_desc_resultado_simulador_notas">Possibilidade(s) mínima(s) para você ser aprovado.</string>
    <string name="lb_codigo_fonte">Código Fonte</string>
    <string name="lb_seminarios">Meus Seminários</string>
    <string name="lb_info_seminarios">Seminário Interdisciplinar</string>
    <string name="lb_novidades">Novidades</string>
    <string name="lb_creditos">Créditos</string>
    <string name="lb_desc_creditos">Saiba mais sobre o desenvolvedor deste app.</string>
    <string name="lb_desc_codigo_fonte">App desenvolvimento através de ferramentas livres.</string>
    <string name="lb_desc_seminarios">Controle das tarefas dos seus seminários.</string>
    <string name="lb_desc_info_seminarios">Informações sobre os seminários.</string>
    <string name="lb_desc_novidades">Acompanhe o desenvolvimento deste e de outros apps.</string>
    <string name="lb_info">Informações</string>
    <string name="lb_desc_info">Saiba como funciona o app.</string>
    <string name="lb_novo_seminario">Novo Seminário</string>
    <string name="lb_desc_novo_seminario">Adicionar seminário para controle das tarefas.</string>
    <string name="lb_edicao_seminario">Editar Seminário</string>
    <string name="lb_desc_edicao_seminario">Controle das tarefas</string>
    <string name="lb_criar_seminario">Criar Seminário</string>
    <string name="lb_salvar_seminario">Salvar Seminário</string>
    <string name="lb_excluir_seminario">Excluir Seminário</string>
    
    <string name="txt_codigo_fonte">Este aplicativo foi idealizado, desenvolvido e disponibilizado por um aluno da faculdade Uniasselvi.\n\n Aluno: Waldenilson Carneiro\n\n Email: waldenilsonnovaes@gmail.com\n\n Pólo de ensino a distância Athenas / São Luis - Maranhão.\n\n---\n\nO código fonte do aplicativo pode ser acessado no repositório online do github no link abaixo.\n\nhttps://github.com/waldenilson/aluno-uniasselvi\n\n---\n\nO git é um programa de controle de versões.\n\nO github é um site para gerenciar os projetos que usam o git.</string>
    <string name="txt_seminarios">Esta será uma das próximas funcionalidades do app.\n\nVocê poderá controlar as tarefas do seu grupo do seminário interdisciplinar semestre a semestre.\n\n---\n\nAs tarefas serão organizadas dentro das etapas do cronograma:\n\nOrientação - CH: 4\nEstudos Preliminares - CH: 5\nPlanejamento - CH: 5\nExecução - CH: 4\nAnálise - CH: 18\nSocialização - CH: 4\n\nCH = Carga Horária</string>
    <string name="txt_info">O app foi desenvolvido com o intuito de reunir na palma da mão as funcionalidades que podem ser úteis para o aluno Uniasselvi.\n\nTodas as funções são baseadas nas informações do portal ava da universidade e envolvimento com alunos e tutores da instituição.\n\nA versão do app é baseada nos commits do git. Em torno de 10 commits gera uma pequena release, em torno de 5 release gera uma atualização no app.\n\nVersão atual: 0.60\n\n---\n\nFerramentas utilizadas no desenvolvimento:\n\nEclipse IDE com SDK Android\n\nControle de projeto XP (métodos ágeis) - Trello\n\nControle de versões - GIT\n\nSistema Operacional - Linux</string>
    <string name="txt_creditos">Criador: Waldenilson Carneiro\n\nDesenvolve em Python/Django, Java/Android\n\nOutras principais tecnologias que utiliza:\n\nMySQL/PostgreSQL\n\neXtreme Programming - XP\n\nGIT\n\n---\n\nProgramador - Ministério Desenvolvimento Agrário\n\nColaborador no portal do software público\n\nFundador da Casa do Software Livre\nNão pague, contribua!\n\nhttp://www.acasadosoftwarelivre.com.br\n\ncontato@acasadosoftwarelivre.com.br\n\nSão Luis - Maranhão</string>
    <string name="txt_novidades">Novas versões serão desenvolvidas de acordo com a necessidade dos alunos da Uniasselvi.\n\nEntre em contato para informar sugestôes, críticas ou propostas de parcerias, trabalhos etc.\n\nEmail: contato@acasadosoftwarelivre.com.br\n\nEmail Pessoal: waldenilsonnovaes@gmail.com\n\nWebSite: http://www.acasadosoftwarelivre.com.br</string>
    
    <string name="lb_voltar">VOLTAR</string>
    <string name="lb_marcar_nota2">Marque para informar a nota da 2ª prova.</string>
    
    <string name="lb_nota_1_objetiva">Nota da 1ª Objetiva:</string>
    <string name="lb_nota_redacao">Nota da Redação</string>
    <string name="lb_simular">SIMULAR</string>
    <string name="lb_sair">SAIR</string>
    
</resources>