<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical" >
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_launcher" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff" />
			
			<TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_desc"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textColor="#eee"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal|center_vertical" >
			<ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:onClick="click_bt_bar_info"
                android:src="@android:drawable/ic_dialog_info" />            
        </LinearLayout>
        
   </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#666" >
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:orientation="vertical"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/lb_creditos"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="2dp"
            android:text="@string/lb_desc_creditos"
            android:textSize="10sp" />
        
    </LinearLayout>
    

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:background="#fff"
            android:layout_margin="10dp"
            android:layout_weight="10" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_creditos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
                    android:textColor="#666"
                    android:textSize="12sp"
                    android:text="TextView" />

            </LinearLayout>
        </ScrollView>


    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/aluno_uniasselvi_top"
        android:orientation="horizontal" >
	        <Button
	            android:id="@+id/button3"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@drawable/aluno_uniasselvi_top"
	            android:onClick="voltar"
	            android:text="@string/lb_voltar" />
    </LinearLayout>
    
</LinearLayout>