<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000"
        android:orientation="horizontal"
        android:gravity="center_vertical" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="voltar"
            android:gravity="center_horizontal|center_vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow" />

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_launcher" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_simulador_notas"
                android:textSize="15sp"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal|center_vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:onClick="click_bt_bar_info"
                android:src="@android:drawable/ic_dialog_info" />
            
        
        </LinearLayout>
        
   </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#666" >
    </LinearLayout>
    
    
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lb_desc_simulador_notas"
            android:textSize="13sp" />
        
    </LinearLayout>    

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_margin="10dp"
            android:background="#fff"
            android:layout_weight="10" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

	            <EditText
	                android:id="@+id/et_redacao"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:textSize="12sp"
	                android:layout_marginTop="10dp"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
                    android:hint="@string/lb_nota_redacao"
	                android:inputType="numberDecimal" />
	
	            <CheckBox
	                android:id="@+id/cb_2nota"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="20dp"
	                android:textColor="#666"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:textSize="12sp"
	                android:text="@string/lb_marcar_nota2" />
	
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal"
		            android:layout_marginTop="20dp"
		            android:layout_marginLeft="5dp"
		            android:layout_marginRight="5dp"
			        android:gravity="center_horizontal|center_vertical" >

			        <TextView
			            android:id="@+id/tv_1_objetiva"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text="@string/lb_nota_1_objetiva"
			            android:textColor="#666"
			            android:layout_weight="2"
			            android:layout_marginLeft="5dp"
			            android:textSize="12sp" />
	            
	        	   <Spinner
		                android:id="@+id/sp_2nota"
		                android:layout_weight="1"
		                android:layout_marginLeft="10dp"
		                android:layout_width="200dp"
		                android:layout_height="wrap_content" />
	            
	            </LinearLayout>    
            	
            </LinearLayout>
        </ScrollView>


    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/aluno_uniasselvi_top"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical" >
	
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:background="@drawable/aluno_uniasselvi_top"
	        android:onClick="bt_simular"
	        android:layout_weight="1"
	        android:text="@string/lb_simular" />
	        
        
    </LinearLayout>
    
</LinearLayout>

