<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000"
        android:orientation="horizontal"
        android:gravity="center_vertical" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="voltar"
            android:gravity="center_horizontal|center_vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow" />

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_launcher" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_novo_seminario"
                android:textSize="15sp"
                android:textColor="#fff" />
        </LinearLayout>
        
   </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#666" >
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lb_desc_novo_seminario"
            android:textSize="13sp" />
        
    </LinearLayout>
    

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:background="#fff"
            android:layout_margin="10dp"
            android:layout_weight="10" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_tema_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Informe o tema do seminário"
                    android:ems="10" >
                </EditText>
                
                <EditText
                    android:id="@+id/et_nome_curso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Informe o curso"
                    android:layout_marginTop="10dp"
                    android:ems="10" >
                </EditText>
                
                <EditText
                    android:id="@+id/et_modulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Informe o módulo"
                    android:layout_marginTop="10dp"
                    android:ems="10" >
                </EditText>
                
                <EditText
                    android:id="@+id/et_grupo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Informe os participantes do grupo"
                    android:layout_marginTop="10dp"
                    android:lines="4"
                    android:inputType="textMultiLine"
                    android:ems="10" >
                </EditText>
                
            </LinearLayout>
        </ScrollView>


    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:background="@drawable/aluno_uniasselvi_top"
		        android:orientation="horizontal"
		        android:gravity="center_horizontal" >
		
		        <Button
		            android:id="@+id/button1"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/aluno_uniasselvi_top"
		            android:text="@string/lb_criar_seminario"
		            android:onClick="bt_criar" />
		        
		    </LinearLayout>
    
</LinearLayout>